browser/css/notebookbar.css
/* ... */
.has-dropdown--color.notebookbar {
	height: var(--btn-size) !important;
}

.unotoolbutton.notebookbar .unolabel {
	font-size: var(--header-font-size);
	font-family: var(--cool-font);
	color: var(--color-main-text);
	padding: 0px 5px !important;
	line-height: normal;
	grid-column: 2;
}

.notebookbar.ui-checkbox {
	display: flex;
	flex-direction: row;
}

label.notebookbar.ui-checkbox-label {
	font-family: var(--cool-font);
	font-size: var(--header-font-size);
	white-space: nowrap;
	padding-left: 0;
}

.notebookbar #table-style-options #chk_filter_buttons2 {
	margin-bottom: 23px;
}

#table-HomeTab .unospan-uptoolbar:not(.disabled) {
	border-top-left-radius: 12px;
	border-bottom-left-radius: 12px;
	background: linear-gradient(to left, #e6e6e600, #e6e6e652 30%);
}
#table-HomeTab .unospan-downtoolbar:not(.disabled) {
	background: linear-gradient(to right, #e6e6e600, #e6e6e652 30%);
	border-top-right-radius: 12px;
	border-bottom-right-radius: 12px;
}
#table-HomeTab .unospan-uptoolbar:not(.disabled):hover {
	box-shadow: -2px 0 2px 2px #e6e6e6b0;
}
#table-HomeTab .unospan-downtoolbar:not(.disabled):hover {
	box-shadow: 2px 0 2px 2px #e6e6e6b0;
}
#table-HomeTab .unospan-uptoolbar img, #table-HomeTab .unospan-downtoolbar img {
	width: 18px !important;
	height: 18px !important;
	padding: 4px;
}

.unotoolbutton.notebookbar.disabled:not(.unospan-shortcutstoolbox),
.unotoolbutton[disabled]:not(.unospan-shortcutstoolbox),
.mobile-wizard-widebutton.disabled,
.locking-disabled {
	opacity: 0.65;
	cursor: not-allowed;
}

.locking-disabled:hover {
	opacity: 1;
}

.restricted-item {
	display: none !important;
}

.unotoolbutton.notebookbar.disabled img,
.mobile-wizard-widebutton.disabled img,
.unotoolbutton[disabled] img {
	-webkit-filter: grayscale(100%) brightness(100%);
	filter: grayscale(100%) brightness(100%);
}

.unotoolbutton:not(.disabled) * {
	cursor: pointer;
}

.unotoolbutton[disabled] * {
	cursor: not-allowed !important;
}

.unotoolbutton.notebookbar {
	text-align: center;
}

.unotoolbutton.notebookbar.has-label > *:not(.arrowbackground) { /*so they stay side by side*/
	display: table-cell;
	width: max-content;
	height: 100%;
}

.unotoolbutton.notebookbar.has-label {
	text-align: center;
}

.unotoolbutton.notebookbar.has-label:not(.inline) img {
	width: 24px !important;
	height: 24px !important;
	box-sizing: border-box;
	margin: auto !important;
	display: block;
}

.ui-pushbutton.notebookbar img {
	height: 24px;
}

.has-label.has-dropdown:not(.inline) .unolabel {
	display: inline-block;
	clear: both;
}

/* adding focus to tab in notebookbar */
.ui-tab.selected.notebookbar.add-focus-to-tab {
	border: 2px solid black !important
}

/* unobuttons with inline labels */

.inline.notebookbar {
	width: max-content;
	white-space: nowrap;
	display: grid;
	grid-auto-flow: column;
	align-items: center;
}

#FormatPaintbrush span {
	display: none;
}

/* Writer */

/* File Tab */

/* Home tab */
.notebookbar.ui-combobox * {
	line-height: 22px;
}

/* Styles preview */
.jsdialog #stylesview:not(.sidebar),
.jsdialog #masterpageall_icons:not(.sidebar),
.jsdialog #tablestyles_design:not(.sidebar),
.jsdialog #transitions_icons:not(.sidebar),
.jsdialog #iconview_theme_colors:not(.sidebar) {
	height: auto !important;
	min-height: 64px !important;
	border: none !important;
	margin: 0 auto !important;

	/*
	 * NOTE: `jsdialog-container .ui-dialog-content` has a
	 *        `max-height` set to `calc( 90vh - 98px)`. this
	 *        max height is a little less than that so that
	 *        if there are buttons in the dropdown below the
	 *        iconview, they wouldn't go into the overflow.
	 */
	max-height: min(calc( 72vh - 98px), 400px) !important;
}

.ui-iconview-buttons-container {
	display: flex;
	flex-direction: column;
	justify-content: center;
	border: 1px solid var(--color-stylesview-border);
	border-top-right-radius: var(--border-radius);
	border-bottom-right-radius: var(--border-radius);
	height: var(--notebookbar-element-height);
	margin-inline-start: -1px;
	box-sizing: border-box;
}

.ui-iconview-buttons-container .unotoolbutton:hover {
	border: 1px solid transparent;
}

.ui-iconview-button button {
	width: calc(var(--btn-size-s) - var(--border-radius-s)) !important;
	height : calc(var(--btn-size-s) - var(--border-radius-s)) !important;
	border: 0;
}

.ui-iconview-button:hover {
	border: 1px solid transparent !important;
}

.ui-iconview-button-icon {
	width: var(--btn-img-size-s) !important;
	height: var(--btn-img-size-s) !important;
	box-sizing: border-box;
}

.jsdialog #stylesview:not(.sidebar),
.jsdialog #masterpageall_icons:not(.sidebar),
.jsdialog #tablestyles_design:not(.sidebar),
.jsdialog #transitions_icons:not(.sidebar),
.notebookbar #stylesview-iconview,
.notebookbar #masterpageall_icons-iconview,
.notebookbar #tablestyles_design-iconview,
.notebookbar #transitions_icons-iconview,
.notebookbar #iconview_theme_colors-iconview,
#custom_animation_list,
#effect_list {
	height: var(--notebookbar-element-height);
	overflow: auto;
	display: grid;
	row-gap: 0;
	padding: 0px;

	border: 1px solid var(--color-stylesview-border);
	border-radius: var(--border-radius);
	border-top-right-radius: 0;
	border-bottom-right-radius: 0;
	border-collapse: separate; /*To use box-shadow in Internet Explorer 9 or later*/

	scrollbar-width: none;
	background-color: var(--color-stylesview-background);
	filter: brightness(var(--brightness-stylesview));
	box-sizing: border-box;
}

/*
 * with each iconview, there exist two kinds of IDs
 * one with the `-iconview` prefix and one without it.
 * see `JSDialog.notebookbarIconView` for details.
 */
.jsdialog #stylesview,
.notebookbar #stylesview-iconview {
	width: 36.8vw !important;
	/* Preview base64's width = 100px + container border's etc */
	grid-template-columns: repeat(auto-fit, minmax(122px, 1fr));
	/* Preview base64's height = 30px  + container border's etc */
	grid-template-rows: repeat(auto-fit, minmax(33px, 1fr));
}
/* ... */

